# pulp

./: .gitattributes  .gitignore  CODEX_SESSION.md  README.md  quality-review-actions.md  skode-command-review.md
.github/workflows/: analysis-sources.yml  dist-api-release.yml
doc/: adc-reveal-slides.html  adc-tokyo-2026-beeps-and-ports.md  beeps_and_ports_presentation.html  index.html  l0.html  l2.html  l3.html  l4.html  l5.html  l6.html  learn.html  maxed-skred-system-diagram.md  reveal_js_wasm_integration.html  show-hn-1.html  skred_api.js  skred_api.wasm  tokyo-adc-notes.html  tokyo-adc-stage.html
kit/: Makefile  ands.c  ands.h  kit  mini-skred.c  miniwav.c  out.c  skode.c  skode.kit  skqueue.h  skred.h  synth-config.h  synth-state.h  synth-types.h  synth-waves.h  synth.kit  util.c  util.h
parts/: .gitignore  0.sk  1.sk  1000.sk  1000.sk.bak  124.sk  2.sk  2000.sk  2001.sk  2020.sk  2021.sk  2022.sk  2023.sk  2030.sk  3000.sk  555.sk  602.sk  808.sk  8080.sk  998.ks  999.ks  999.sk  API_INTEGRATION.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  COMPARISONS.md  EVENTS.md  HINT.txt  Makefile  OPCODES.md  POLYPHONY.md  SKODE_COMMANDS.md  SKODE_USER_COMMAND_REFERENCE.md  amxm.sk  ands.c  ands.h  api.c.kit  api.h  bob.sk  (+69 more)
parts/analysis-src/: api.c  mini-skred.c  polyphony.c  recorder.c  recorder.h  seq.c  seq.h  skode.c  synth-alloc.c  synth-state.h  synth.c  synth.h
parts/cmake/: SmokeTest.cmake  skred-version.h.in  zig-cc.cmake
parts/docs/: index.html  skred_api.wasm
parts/examples/: fm-dx-inspired.sk  ksynth-drums-inspired.sk  moog-inspired.sk  pd-cz-inspired.sk  poly-layer.sk  poly-mono.sk
parts/exp-vfs/: Makefile  main.c  skred_vfs.c  skred_vfs.h  skred_vfs.md
parts/sk-out/: 124.sk  909.sk  drums-chh.ks  drums-clap.ks  drums-clave.ks  drums-cowbell.ks  drums-crash.ks  drums-cymbal.ks  drums-hitom.ks  drums-kick.ks  drums-lotom.ks  drums-maracas.ks  drums-midtom.ks  drums-ohh.ks  drums-rim.ks  drums-snare.ks  drums-tomhi.ks  drums-tomlo.ks  drums-tommid.ks  drums-trigger.ks
parts/tests/: ands_parser_tests.c  audio_command_tests.c  ksynth_bridge_tests.c  midi_tests.c  polyphony_tests.c  recording_tests.c  render_equivalence_probe.c  scope_ipc_tests.c  skode_state_tests.c  skqueue_tests.c  synth_callback_bench.c
parts/wasm-assets/: mkwasm  serve-wasm.sh  test-control-dispatch.js  test-wasm.html
vfs/: Makefile  readme.md
